--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django-crispy-forms==1.12.0
 django-heroku==0.3.1
 gunicorn==20.1.0
 nose==1.3.7
+Pillow==8.3.2
 pytest==5.4.1
 soupsieve==2.2.1
 virtualenv==20.0.18
